2007-05-10  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic:
	  Updated.
	* Mono.Addins.Gui/NewSiteDialog.cs,
	  Mono.Addins.Gui/ManageSitesDialog.cs,
	  Mono.Addins.Gui/AddinManagerWindow.cs, Mono.Addins.Gui/Services.cs,
	  Mono.Addins.Gui/AddinInstallDialog.cs,
	  Mono.Addins.Gui/ErrorDialog.cs,
	  Mono.Addins.Gui/AddinManagerDialog.cs: Properly destroy all
	  dialogs.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also
	  store information about unsuccessful lookups, to avoid looking for
	  an add-in again if we found that it doesn't exist. In Update(),
	  don't use verbose output by default.

2007-04-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui.csproj: Added msbuild project files. Patch by
	  Matthijs ter Woord.

2007-03-30  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs,
	  gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs, gtk-gui/gui.stetic:
	  Updated.
	* Mono.Addins.Gui/NewSiteDialog.cs: Implement missing bits in the
	  dialog.
	* Mono.Addins.Gui/AddinInstallDialog.cs: Fixed nullref. Removed
	  "restart" message.

2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, Mono.Addins.Gui.mdp: Enabled conditional compilation of
	  the gui lib.
